--- a/blog-back-auteur/src/main/resources/application.properties
+++ b/blog-back-auteur/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name: blog-back-auteur
 server.port 9001
 
-## MySQL
-spring.datasource.url=jdbc:mariadb://
+## Permet la connexion a la bdd MySQL
+spring.datasource.url=jdbc:mariadb://localhost:3306/blogmicroservices?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 
