--- a/blog-back-categorie/src/main/resources/application.properties
+++ b/blog-back-categorie/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.application.name: blog-back-articles
-server.port 9002
+spring.application.name: blog-back-categorie
+server.port 9003
 
 ## Permet la connexion a la bdd MySQL
 spring.datasource.url=jdbc:mariadb://localhost:3306/blogmicroservices?serverTimezone=UTC
