Ajout par Jean le 27/02/2020 a 22H18

--- a/blog-back-articles/src/main/resources/application.properties
+++ b/blog-back-articles/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name: blog-back-articles
+spring.application.name: blogbackarticles
 server.port 9002
 
 ## Permet la connexion a la bdd MySQL
