--- a/blog-back-categorie/src/main/resources/application.properties
+++ b/blog-back-categorie/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name: blog-back-categorie
+spring.application.name: blogbackcategorie
 server.port 9003
 
 ## Permet la connexion a la bdd MySQL
