Fait par Jean et ajouté le 29/02/2020

--- a/blog-back-auteur/src/main/resources/application.properties
+++ b/blog-back-auteur/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name: blog-back-auteur
+spring.application.name: blogbackauteur
 server.port 9001
 
 ## Permet la connexion a la bdd MySQL
@@ -8,3 +8,6 @@ spring.datasource.password=
 
 spring.jpa.database-platform=org.hibernate.dialect.MariaDB53Dialect
 spring.jpa.show-sql=false
+
+#Eureka
+eureka.client.serviceUrl.defaultZone:http://localhost:9105/eureka/
