--- a/client-blog/src/main/resources/application.properties
+++ b/client-blog/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.application.name=blogclient
 
+#Eureka
+eureka.client.serviceUrl.defaultZone:http://localhost:9105/eureka/
+
+#Ribbon
+server.ribbon.eureka.enable=true
