--- a/blog-back-articles/src/main/resources/application.properties
+++ b/blog-back-articles/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.password=
 
 spring.jpa.database-platform=org.hibernate.dialect.MariaDB53Dialect
 spring.jpa.show-sql=false
+
+eureka.client.serviceUrl.defaultZone:http://localhost:9105/eureka/
