--- a/blog-back-categorie/src/main/resources/application.properties
+++ b/blog-back-categorie/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.password=
 
 spring.jpa.database-platform=org.hibernate.dialect.MariaDB53Dialect
 spring.jpa.show-sql=false
+
+#Eureka
+eureka.client.serviceUrl.defaultZone:http://localhost:9105/eureka/
